style: add and fix fallbacks for tables

--- a/app/views/admin/transactions/_admin_transactions_table.html.erb
+++ b/app/views/admin/transactions/_admin_transactions_table.html.erb
@@ -35,3 +35,12 @@
     <% end %>
   <% end %>
 <% end %>
+
+<div class='flex w-full justify-center'>
+  <%= paginate @transactions %>
+</div>
+
+<% if @transactions.empty? %>
+  <div class="my-12 w-full text-center text-sm text-muted-foreground">No transactions found.</div>
+<% end %>
+
