--- a/app/views/transactions/_user_transactions_table.html.erb
+++ b/app/views/transactions/_user_transactions_table.html.erb
@@ -31,5 +31,5 @@
 </div>
 
 <% if @transactions.empty? %>
-  <div class="my-12 w-full tt-center text-sm text-muted-foreground">No transactions found.</div>
+  <div class="my-12 w-full text-center text-sm text-muted-foreground">No transactions found.</div>
 <% end %>
