--- a/app/views/users/lists/_users.html.erb
+++ b/app/views/users/lists/_users.html.erb
@@ -51,5 +51,5 @@
 <% end %>
 
 <% if @users.empty? %>
-  <div class="my-12 w-full text-center text-sm text-muted-foreground">No transactions found.</div>
+  <div class="my-12 w-full text-center text-sm text-muted-foreground">No users found.</div>
 <% end %>
